--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <style src="../static/css/style.css"></style>
+
+    <title>Gotta Check'em All</title>
 </head>
 <body>
+    <h1>Gotta Check'em All</h1>
+
     
+    <url src="../static/js/script.js"></url>
 </body>
 </html>
