Iniziato css del titolo

--- a/static/index.html
+++ b/static/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style src="../static/css/style.css"></style>
+    <link rel="stylesheet" href="../static/css/style.css">
 
     <title>Gotta Check'em All</title>
 </head>
 <body>
-    <h1>Gotta Check'em All</h1>
+    <div id="page">
+        <h1>Gotta Check'em All</h1>
 
-    
+    </div>
+
     <url src="../static/js/script.js"></url>
 </body>
 </html>
