Creazione del componente sottotilo in html

--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,9 @@
 <body>
     <div id="page">
         <h1>Gotta Check'em All</h1>
-
+        <p id="sottotitolo">Benvenuto nel tuo motore di ricerca per Pokémon. Potrai inserire le caratteristiche di un Pokémon fittizio e il back-end cercherà grazie 
+            all'argoritmo di Machine Leanring KNN(K-Nearest Neighbors) i 5 Pokémon più simili a quello che hai inserito.</p> 
+        </p>
     </div>
 
     <url src="../static/js/script.js"></url>
