Creazione dello stile del sottotitolo

--- a/static/index.html
+++ b/static/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="page">
         <h1>Gotta Check'em All</h1>
-        <p id="sottotitolo">Benvenuto nel tuo motore di ricerca per Pokémon. Potrai inserire le caratteristiche di un Pokémon fittizio e il back-end cercherà grazie 
-            all'argoritmo di Machine Leanring KNN(K-Nearest Neighbors) i 5 Pokémon più simili a quello che hai inserito.</p> 
+        <p id="sottotitolo"> <span class="bold">Benvenuto</span>  nel tuo motore di ricerca per Pokémon. Potrai inserire le caratteristiche di un <span class="bold">Pokémon fittizio</span> e il back-end <br> cercherà grazie 
+            all'argoritmo di Machine Leanring <span class="bold">KNN(K-Nearest Neighbors)</span> i 5 Pokémon più simili a quello che hai <br> inserito.</p> 
         </p>
     </div>
 
