Creazione microcomponente input

--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,33 @@
         <p id="sottotitolo"> <span class="bold">Benvenuto</span>  nel tuo motore di ricerca per Pokémon. Potrai inserire le caratteristiche di un <span class="bold">Pokémon fittizio</span> e il back-end <br> cercherà grazie 
             all'argoritmo di Machine Leanring <span class="bold">KNN(K-Nearest Neighbors)</span> i 5 Pokémon più simili a quello che hai <br> inserito.</p> 
         </p>
+
+        <form>
+            <div class="form-group">
+                <label for="vita">Punti Vita (HP)</label>
+                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+            </div>
+            <div class="form-group">
+                <label for="attacco">Punti Attacco (Attack)</label>
+                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+            </div>
+            <div class="form-group">
+                <label for="difesa">Punti difesa (Defense)</label>
+                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+            </div>
+            <div class="form-group">
+                <label for="attacco_speciale">Punti Attacco Speciale (Sp. Atk):</label>
+                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+            </div>
+            <div class="form-group">
+                <label for="difesa_speciale">Punti Difesa Speciale (Sp. Defense)</label>
+                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+            </div>
+            <div class="form-group">
+                <label for="velocita">Punti Veocità (Speed)</label>
+                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+            </div>
+        </form>
     </div>
     <url src="../static/js/script.js"></url>
 </body>
