--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,10 @@
                 <label for="velocita">Punti Veocità (Speed)</label>
                 <input type="number" placeholder="Inserisci un numero da 0 a 300">
             </div>
+            
+            <div class="form-group">
+                <button type="submit">Cerca</button>
+            </div>
         </form>
     </div>
     <url src="../static/js/script.js"></url>
