aggiunto stile di testo a tutto il form

--- a/static/index.html
+++ b/static/index.html
@@ -34,16 +34,20 @@
             </div>
 
             <div class="form-group">
-                
+                <div class="form-element">
                 <label for="attacco_speciale">Punti Attacco Speciale (Sp. Atk):</label>
                 <input type="number" placeholder="Inserisci un numero da 0 a 300">
+                </div>
 
+                <div class="form-element">
                 <label for="difesa_speciale">Punti Difesa Speciale (Sp. Defense)</label>
                 <input type="number" placeholder="Inserisci un numero da 0 a 300">
-            
+                </div>    
 
+                <div class="form-element">
                 <label for="velocita">Punti Veocità (Speed)</label>
                 <input type="number" placeholder="Inserisci un numero da 0 a 300">
+                </div>
             </div>
                 <div id="bottone">
                     <button type="submit">Cerca</button>
