Creare lo stile per il componente bottone

--- a/static/index.html
+++ b/static/index.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
                 <div id="bottone">
-                    <button type="submit">Cerca</button>
+                    <button id="ludovica" type="submit">CERCA</button>
                 </div>
             
                 
