Feat: Finito creazione lo stile componente input

--- a/skels/index.html
+++ b/skels/index.html
@@ -18,35 +18,35 @@
         <form>
             <div class="form-group">
                 <div class="form-element">
-                <label for="vita">Punti Vita (HP)</label>
-                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+                <label for="vita"> <span class="bold">Punti Vita (HP)</span></label>
+                <input type="text" placeholder="Inserisci un numero da 0 a 300">
                 </div>
                 
                 <div class="form-element">
-                <label for="attacco">Punti Attacco (Attack)</label>
-                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+                <label for="attacco"> <span class="bold">Punti Attacco (Attack)</span></label>
+                <input type="text" placeholder="Inserisci un numero da 0 a 300">
                 </div>        
                 
                 <div class="form-element">
-                <label for="difesa">Punti difesa (Defense)</label>
-                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+                <label for="difesa"> <span class="bold">Punti difesa (Defense)</span></label>
+                <input type="text" placeholder="Inserisci un numero da 0 a 300">
                 </div>  
             </div>
 
             <div class="form-group">
-                <div class="form-element">
-                <label for="attacco_speciale">Punti Attacco Speciale (Sp. Atk):</label>
-                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+                <div class="form-element form-element2">
+                <label for="attacco_speciale"> <span class="bold">Punti Attacco Speciale (Sp. Atk):</span></label>
+                <input type="text" placeholder="Inserisci un numero da 0 a 300">
                 </div>
 
-                <div class="form-element">
-                <label for="difesa_speciale">Punti Difesa Speciale (Sp. Defense)</label>
-                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+                <div class="form-element form-element2">
+                <label for="difesa_speciale"> <span class="bold">Punti Difesa Speciale (Sp. Defense)</span></label>
+                <input type="text" placeholder="Inserisci un numero da 0 a 300">
                 </div>    
 
-                <div class="form-element">
-                <label for="velocita">Punti Veocità (Speed)</label>
-                <input type="number" placeholder="Inserisci un numero da 0 a 300">
+                <div class="form-element form-element2">
+                <label for="velocita"> <span class="bold">Punti Veocità (Speed)</span></label>
+                <input type="text" placeholder="Inserisci un numero da 0 a 300">
                 </div>
             </div>
                 <div id="bottone">
