Feat: aggiunta favicon

--- a/skels/index.html
+++ b/skels/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/style.css">
-
+    <link rel="shortcut icon" href="../static/img/icon.png" type="image/x-icon">
     <title>Gotta Check'em All</title>
 </head>
 <body>
@@ -19,17 +19,17 @@
             <div class="form-group">
                 <div class="form-element">
                 <label for="vita"> <span class="bold">Punti Vita (HP)</span></label>
-                <input type="text" id="vita" placeholder="Inserisci un numero da 0 a 300">
+                <input type="text" id="vita" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>
                 
                 <div class="form-element">
                 <label for="attacco"> <span class="bold">Punti Attacco (Attack)</span></label>
-                <input type="text" id="attacco" placeholder="Inserisci un numero da 0 a 300">
+                <input type="text" id="attacco" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>        
                 
                 <div class="form-element">
                 <label for="difesa"> <span class="bold">Punti difesa (Defense)</span></label>
-                <input type="text"id="difesa" placeholder="Inserisci un numero da 0 a 300">
+                <input type="text"id="difesa" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>  
             </div>
 
@@ -46,7 +46,7 @@
 
                 <div class="form-element form-element2">
                 <label for="velocita"> <span class="bold">Punti Veocità (Speed)</span></label>
-                <input type="text" id="velocita" placeholder="Inserisci un numero da 0 a 300">
+                <input required type="text" id="velocita" placeholder="Inserisci un numero da 0 a 300">
                 </div>
             </div>
                 <div id="bottone">
