--- a/skels/index.html
+++ b/skels/index.html
@@ -15,38 +15,38 @@
             all'argoritmo di Machine Leanring <span class="bold">KNN(K-Nearest Neighbors)</span> i 5 Pokémon più simili a quello che hai <br> inserito.</p> 
         </p>
 
-        <form>
+        <form id="myForm">
             <div class="form-group">
                 <div class="form-element">
                 <label for="vita"> <span class="bold">Punti Vita (HP)</span></label>
-                <input type="text" id="vita" placeholder="Inserisci un numero da 0 a 300" required>
+                <input class="dato" name="vita" type="text" id="vita" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>
                 
                 <div class="form-element">
                 <label for="attacco"> <span class="bold">Punti Attacco (Attack)</span></label>
-                <input type="text" id="attacco" placeholder="Inserisci un numero da 0 a 300" required>
+                <input class="dato" type="text" name="attacco" id="attacco" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>        
                 
                 <div class="form-element">
                 <label for="difesa"> <span class="bold">Punti difesa (Defense)</span></label>
-                <input type="text"id="difesa" placeholder="Inserisci un numero da 0 a 300" required>
+                <input class="dato" type="text" id="difesa" name="difesa" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>  
             </div>
 
             <div class="form-group">
                 <div class="form-element form-element2">
                 <label for="attacco_speciale"> <span class="bold">Punti Attacco Speciale (Sp. Atk):</span></label>
-                <input type="text" id="attacco_spaziale" placeholder="Inserisci un numero da 0 a 300">
+                <input class="dato" type="text" name="attspeciale" id="attacco_spaziale" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>
 
                 <div class="form-element form-element2">
                 <label for="difesa_speciale"> <span class="bold">Punti Difesa Speciale (Sp. Defense)</span></label>
-                <input type="text" id="difesa_speciale" placeholder="Inserisci un numero da 0 a 300">
+                <input class="dato" type="text" name="difesapeciale" id="difesa_speciale" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>    
 
                 <div class="form-element form-element2">
                 <label for="velocita"> <span class="bold">Punti Veocità (Speed)</span></label>
-                <input required type="text" id="velocita" placeholder="Inserisci un numero da 0 a 300">
+                <input class="dato" required type="text" name="velocita" id="velocita" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>
             </div>
                 <div id="bottone">
@@ -54,6 +54,6 @@
                 </div>  
         </form>
     </div>
-    <url src="../static/js/script.js"></url>
+    <script src="../static/js/script.js"></script>
 </body>
 </html>
