Fix: risomma classe dato (inutilizzato)

--- a/skels/index.html
+++ b/skels/index.html
@@ -19,34 +19,34 @@
             <div class="form-group">
                 <div class="form-element">
                 <label for="vita"> <span class="bold">Punti Vita (HP)</span></label>
-                <input class="dato" name="vita" type="text" id="vita" placeholder="Inserisci un numero da 0 a 300" required>
+                <input name="vita" type="text" id="vita" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>
                 
                 <div class="form-element">
                 <label for="attacco"> <span class="bold">Punti Attacco (Attack)</span></label>
-                <input class="dato" type="text" name="attacco" id="attacco" placeholder="Inserisci un numero da 0 a 300" required>
+                <input type="text" name="attacco" id="attacco" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>        
                 
                 <div class="form-element">
                 <label for="difesa"> <span class="bold">Punti difesa (Defense)</span></label>
-                <input class="dato" type="text" id="difesa" name="difesa" placeholder="Inserisci un numero da 0 a 300" required>
+                <input type="text" id="difesa" name="difesa" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>  
             </div>
 
             <div class="form-group">
                 <div class="form-element form-element2">
                 <label for="attacco_speciale"> <span class="bold">Punti Attacco Speciale (Sp. Atk):</span></label>
-                <input class="dato" type="text" name="attspeciale" id="attacco_spaziale" placeholder="Inserisci un numero da 0 a 300" required>
+                <input type="text" name="attspeciale" id="attacco_spaziale" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>
 
                 <div class="form-element form-element2">
                 <label for="difesa_speciale"> <span class="bold">Punti Difesa Speciale (Sp. Defense)</span></label>
-                <input class="dato" type="text" name="difesapeciale" id="difesa_speciale" placeholder="Inserisci un numero da 0 a 300" required>
+                <input type="text" name="difesapeciale" id="difesa_speciale" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>    
 
                 <div class="form-element form-element2">
                 <label for="velocita"> <span class="bold">Punti Veocità (Speed)</span></label>
-                <input class="dato" required type="text" name="velocita" id="velocita" placeholder="Inserisci un numero da 0 a 300" required>
+                <input required type="text" name="velocita" id="velocita" placeholder="Inserisci un numero da 0 a 300" required>
                 </div>
             </div>
                 <div id="bottone">
