feat: creazione card front-end

--- a/skels/index.html
+++ b/skels/index.html
@@ -53,6 +53,31 @@
                 <div id="bottone">
                     <button id="ludovica" type="submit">CERCA</button>
                 </div>  
+
+            <div class="containercard">
+                <div class="container2">
+                    <div class="containercard">
+                        <img class="immagine" src="../static/img/bulbus.png" alt="Immagine del pokemon">
+                    </div>
+                    <div class="stats">
+                        <h3 class="namecard">Bulbasaur</h3>
+                        <p class="gencard">Gen. 1</p>
+                        <p class="typescard">Tipi: <span class="bold">grass, poison</span></p>
+                        <div class="statscard">
+                            <div>
+                                <p>HP <span class="bold">20</span></p>
+                                <p>Atk <span class="bold">20</span></p>
+                                <p>Def <span class="bold">20</span></p>
+                            </div>
+                            <div>
+                                <p>Sp. Atk <span class="bold">20</span></p>
+                                <p>Sp. Def <span class="bold">20</span></p>
+                                <p>Speed <span class="bold">20</span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>    
         </form>
     </div>
     <script src="../static/js/script.js"></script>
