feat inizio del css della card

--- a/skels/index.html
+++ b/skels/index.html
@@ -52,33 +52,30 @@
             </div>
                 <div id="bottone">
                     <button id="ludovica" type="submit">CERCA</button>
-                </div>  
-
-            <div class="containercard">
-                <div class="container2">
-                    <div class="containercard">
-                        <img class="immagine" src="../static/img/bulbus.png" alt="Immagine del pokemon">
+                </div> 
+        </form>
+        <div class="containercard">
+            <div class="containerimg">
+                <img class="immagine" src="../static/img/bulbasaur.png" alt="Immagine del pokemon">
+            </div>
+            <div class="stats">
+                <h3 class="namecard">Bulbasaur</h3>
+                <p class="gencard">Gen. 1</p>
+                <p class="typescard">Tipi: <span class="bold">grass, poison</span></p>
+                <div class="statscard">
+                    <div>
+                        <p>HP <span class="bold">20</span></p>
+                        <p>Atk <span class="bold">20</span></p>
+                        <p>Def <span class="bold">20</span></p>
                     </div>
-                    <div class="stats">
-                        <h3 class="namecard">Bulbasaur</h3>
-                        <p class="gencard">Gen. 1</p>
-                        <p class="typescard">Tipi: <span class="bold">grass, poison</span></p>
-                        <div class="statscard">
-                            <div>
-                                <p>HP <span class="bold">20</span></p>
-                                <p>Atk <span class="bold">20</span></p>
-                                <p>Def <span class="bold">20</span></p>
-                            </div>
-                            <div>
-                                <p>Sp. Atk <span class="bold">20</span></p>
-                                <p>Sp. Def <span class="bold">20</span></p>
-                                <p>Speed <span class="bold">20</span></p>
-                            </div>
-                        </div>
+                    <div>
+                        <p>Sp. Atk <span class="bold">20</span></p>
+                        <p>Sp. Def <span class="bold">20</span></p>
+                        <p>Speed <span class="bold">20</span></p>
                     </div>
                 </div>
-            </div>    
-        </form>
+            </div>
+    </div>   
     </div>
     <script src="../static/js/script.js"></script>
 </body>
